--- a/projects/project_01_browser/css/style.css
+++ b/projects/project_01_browser/css/style.css
@@ -1,83 +1,83 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: "Montserrat", sans-serif;
-    background-color: gainsboro;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  background-color: gainsboro;
 }
 
 .wrapper {
-    width: 800px;
-    background-color: #fff;
-    box-shadow: 0 0 10px black;
+  width: 800px;
+  background-color: #fff;
+  box-shadow: 0 0 10px black;
 }
 
-.header {    
-    font-family: "Dancing Script", cursive;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    flex-direction: column;
-    position: relative;
-    height: 360px;
-    padding: 20px 40px;
-    background-image: url('../img/drink.jpg');
-    background-size: cover;
-    background-position: center;
-    z-index: 0;
+.header {
+  font-family: 'Dancing Script', cursive;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: column;
+  position: relative;
+  height: 360px;
+  padding: 20px 40px;
+  background-image: url('../img/drink.jpg');
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
 }
 
 .shadow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, .35);
-    z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.35);
+  z-index: -1;
 }
 
 h1 {
-    margin-bottom: 30px;
-    color: #fff;
-    font-size: 50px;
+  margin-bottom: 30px;
+  color: #fff;
+  font-size: 50px;
 }
 
 .search {
-    padding: 10px 20px;
-    margin-bottom: 40px;
-    width: 100%;
-    font-size: 16px;
-    border-radius: 5px;
-    background-color: rgb(255, 255, 255, .85);
+  padding: 10px 20px;
+  margin-bottom: 40px;
+  width: 100%;
+  font-size: 16px;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255, 0.85);
 }
 
 .drink-list {
-    padding: 20px 40px;
+  padding: 20px 40px;
 }
 
 h2 {
-    padding: 30px 0;
+  padding: 30px 0;
 }
 
 ul {
-    padding-bottom: 30px;
-    font-size: 20px;
-    list-style: none;
+  padding-bottom: 30px;
+  font-size: 20px;
+  list-style: none;
 }
 
 li {
-    padding: 7px 30px;
-    border-bottom: 1px solid rgb(226, 226, 226);
+  padding: 7px 30px;
+  border-bottom: 1px solid rgb(226, 226, 226);
 }
 
 li:last-child {
-    border-bottom: 0;
+  border-bottom: 0;
 }
